[package]
name = "tail"
version = "0.0.1"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
env_logger = "0.11.8"
image = { version = "0.25.9", features = ["jpeg", "png"] }
lazy_static = "1.5.0"
rfd = "0.17.2"

[build-dependencies]
bindgen = "0.71.0" # this is mainly for sourcepp's vpkpp bindings
